lessons/03-parsing/scheem/scheem.peg
start =
    ws* expr:expression ws*
			{return expr;}

expression =
    atom
    / '(' ws* a:atomlist ws* ')'
    	{ return a; }
    / "'" expr:expression
    	{ return ['quote', expr]; }

atomlist =
    a:expression ws+ al:atomlist
    	{ return [a].concat(al); }
	/ a:expression
    	{ return [a]; }

ws = 
	[ \t\n\r]+
	/ ";;" [^\r\n]*

validchar
    = [0-9a-zA-Z_?!+\=@#$%^&*/.-]

atom =
    chars:validchar+
        { return chars.join(""); }
